[FIXED] forbid use image and text in easyui window
Former-commit-id: a67ea73acc542fb46a0afc91ee0d53433ed7a26b

--- a/easyui/platform/msvc2008/projects/easyui.vcproj
+++ b/easyui/platform/msvc2008/projects/easyui.vcproj
@@ -316,6 +316,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easyui\window\SpriteDropTarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyui\window\SpriteDropTarget.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easyui\window\StageCanvas.cpp"
 					>
 					<FileConfiguration
@@ -940,10 +948,6 @@
 				RelativePath="..\..\..\src\easyui\EditClipboxOP.h"
 				>
 			</File>
-		</Filter>
-		<Filter
-			Name="0. allwnds"
-			>
 		</Filter>
 		<File
 			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
