[ADDED] open sym dir
Former-commit-id: b4e386ace3150444a0d39f2feef019abbe877b12

--- a/easyeditor/platform/msvc2008/projects/libgui.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libgui.vcproj
@@ -286,6 +286,14 @@
 			Name="property"
 			>
 			<File
+				RelativePath="..\..\..\source\gui\FileDirProperty.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\FileDirProperty.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\gui\MyColorProperty.cpp"
 				>
 			</File>
