[ADDED] user font
Former-commit-id: fcde7559d1254809903fec32004486d47013f663

--- a/ds/platform/msvc2008/projects/ds.vcproj
+++ b/ds/platform/msvc2008/projects/ds.vcproj
@@ -154,6 +154,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\ds\ds_freelist.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\ds\ds_hash.c"
 			>
 		</File>
