[ADDED] user font cfg
Former-commit-id: 7f0a1e945bb277b9e50453cc491c7bb2582b6a10

--- a/gtxt/platform/msvc2008/projects/gtxt.vcproj
+++ b/gtxt/platform/msvc2008/projects/gtxt.vcproj
@@ -209,6 +209,14 @@
 			RelativePath="..\..\..\src\gtxt\gtxt_user_font.h"
 			>
 		</File>
+		<File
+			RelativePath="..\..\..\src\gtxt\gtxt_util.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\gtxt\gtxt_util.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
