[FIXED] trail shape
Former-commit-id: 49e0a06292b3fc848e08d69eba31544f54fb9e35

--- a/easytrail/platform/msvc2008/projects/libtrail.vcproj
+++ b/easytrail/platform/msvc2008/projects/libtrail.vcproj
@@ -208,6 +208,22 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libtrail\ImageCompPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libtrail\ImageCompPanel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libtrail\ShapeCompPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libtrail\ShapeCompPanel.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libtrail\ToolbarPanel.cpp"
 					>
 				</File>
