[ADDED] mtrail as submodule
Former-commit-id: f8ba98fa535d0bfd67e98ebbb73b22f04a36dc7d

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "logger/src/logger"]
 	path = logger/src/logger
 	url = ssh://git@tea.ejoy.com:3222/LR/logger.git
+[submodule "mtrail/src/mtrail"]
+	path = mtrail/src/mtrail
+	url = ssh://git@tea.ejoy.com:3222/LR/mtrail.git
