[ADDED] gl blend
Former-commit-id: cfa1bb67265b84428088c377fb9a6d697d356693

--- a/easyeditor/platform/msvc2008/projects/librender.vcproj
+++ b/easyeditor/platform/msvc2008/projects/librender.vcproj
@@ -297,6 +297,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\include\ee\FastBlendModes.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\ee\FastBlendModes.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\render\FilterModes.cpp"
 					>
 				</File>
