[ADDED] trail name
Former-commit-id: 5ccfa61e3b9c780841b85509e6b2e4a96685306e

--- a/easytrail/platform/msvc2008/projects/libtrail.vcproj
+++ b/easytrail/platform/msvc2008/projects/libtrail.vcproj
@@ -232,6 +232,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="property"
+				>
+				<File
+					RelativePath="..\..\..\src\libtrail\PropertySettingPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libtrail\PropertySettingPanel.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="dataset"
