--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "mtrail/src/mtrail"]
 	path = mtrail/src/mtrail
 	url = ssh://git@tea.ejoy.com:3222/LR/mtrail.git
+[submodule "cu/src/cu"]
+	path = cu/src/cu
+	url = ssh://git@tea.ejoy.com:3222/LR/cu.git
