move node render to s2
Former-commit-id: e6cb62e66c0ab9102ae40b9ff3944ef4702adb27

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -709,6 +709,14 @@
 			Name="render"
 			>
 			<File
+				RelativePath="..\..\..\source\render\NodeRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\sprite2\NodeRenderer.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\render\S2_CameraMgr.cpp"
 				>
 			</File>
@@ -738,14 +746,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\include\sprite2\S2_RVG.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\source\render\SpriteRenderer.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\include\sprite2\SpriteRenderer.h"
 				>
 			</File>
 		</Filter>
