[CHANGED] move draw spr to s2
Former-commit-id: 920ffff546f0e57a004b529610bdc34760bcd007

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -740,11 +740,27 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\source\render\DrawGaussianBlur.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\DrawGaussianBlur.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\render\DrawNode.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\..\include\sprite2\DrawNode.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\render\DrawOuterGlow.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\DrawOuterGlow.h"
 					>
 				</File>
 			</Filter>
