[ADDED] move escale9 to s2
Former-commit-id: d76cdc2d0484c41a79bf8e5ee012e2c8661d11e5

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -452,6 +452,14 @@
 				Name="scale9"
 				>
 				<File
+					RelativePath="..\..\..\source\sprites\Scale9.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\Scale9.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\sprites\Scale9Sprite.cpp"
 					>
 				</File>
