--- a/sm/platform/msvc2008/projects/sm.vcproj
+++ b/sm/platform/msvc2008/projects/sm.vcproj
@@ -291,6 +291,14 @@
 				RelativePath="..\..\..\src\sm\SM_DouglasPeucker.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Triangulation.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Triangulation.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
