--- a/easymesh/platform/msvc2008/projects/libmesh.vcproj
+++ b/easymesh/platform/msvc2008/projects/libmesh.vcproj
@@ -280,11 +280,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmesh\MeshTrans.cpp"
+					RelativePath="..\..\..\src\libmesh\MeshSerialization.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmesh\MeshTrans.h"
+					RelativePath="..\..\..\src\libmesh\MeshSerialization.h"
 					>
 				</File>
 			</Filter>
