[ADDED] move mask to s2
Former-commit-id: 43ac5d652ee4453b5afbf9eeed7f15c00361d160

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -791,6 +791,22 @@
 			<Filter
 				Name="mask"
 				>
+				<File
+					RelativePath="..\..\..\source\sprites\MaskSprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\MaskSprite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\sprites\MaskSymbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\MaskSymbol.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="trail"
@@ -865,6 +881,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\include\sprite2\DrawGaussianBlur.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\source\render\DrawMask.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\DrawMask.h"
 					>
 				</File>
 				<File
