--- a/sm/platform/msvc2008/projects/sm.vcproj
+++ b/sm/platform/msvc2008/projects/sm.vcproj
@@ -216,6 +216,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\sm\SM_Process.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Process.inl"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\sm\SM_Test.cpp"
 				>
 			</File>
