[ADDED] symbol update
Former-commit-id: 9227daea6c7a351672a455a6f5d015743d055c58

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -412,6 +412,14 @@
 				Name="anim"
 				>
 				<File
+					RelativePath="..\..\..\source\sprites\AnimCurr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\AnimCurr.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\sprites\AnimLerp.cpp"
 					>
 				</File>
