[ADDED] move p2d to s2
Former-commit-id: 43c6cb9b60bd89c3cdfdb82b22b98f6494e839d7

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -496,6 +496,14 @@
 				Name="particle2d"
 				>
 				<File
+					RelativePath="..\..\..\source\sprites\Particle2d.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\Particle2d.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\sprites\Particle2dSprite.cpp"
 					>
 				</File>
