--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -448,6 +448,14 @@
 				Name="particle3d"
 				>
 				<File
+					RelativePath="..\..\..\source\sprites\Particle3d.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\sprite2\Particle3d.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\sprites\Particle3dSprite.cpp"
 					>
 				</File>
